<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/intro_background"
    android:gravity="center">
    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_today_planner"
        android:maxLines="2"
        android:textColor="@color/titleColor"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/sign_in_or_sign_up"
        android:src="@drawable/ic_sign_in_image"
        />
    <TextView
        android:id="@+id/let_s_get_started_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:textStyle="bold"
        android:textColor="@color/descriptionColor"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/sign_in_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/sign_in_description"
        android:textSize="18sp"
        android:textColor="@color/descriptionColor"
        android:maxLines="2" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/sign_in"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/sign_up"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />
</LinearLayout>