<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.chari.ic.todoapp.fragments.tasks_fragment.TasksFragment"
        android:label="@string/todo_list"
        tools:layout="@layout/fragment_tasks" >
...
            app:exitAnim="@anim/to_left" />
        <argument
            android:name="currentTask"
            app:argType="com.chari.ic.todoapp.data.database.entities.ToDoTask" />
    </fragment>
    <fragment
        android:id="@+id/introFragment"
        android:name="com.chari.ic.todoapp.fragments.auth_fragments.IntroFragment"
        android:label="@string/intro" >
        <action
            android:id="@+id/action_introFragment_to_loginFragment"
            app:destination="@id/signInFragment" />
        <action
...
